--- a/Frontend/BTOmail/src/app/components/correos/correos.component.html
+++ b/Frontend/BTOmail/src/app/components/correos/correos.component.html
@@ -1,71 +1,20 @@
-<div class="container-fluid mx-2">
-    <div class="row border-bottom">
-        <div class="col-3 d-flex flex-row align-items-center">
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-7"></div>
+        <div class="col-5 pt-3"><pagination-controls (pageChange)="p = $event"></pagination-controls></div>
+    </div>
+    <div class="row border-top" *ngFor="let recibido of recibidos | paginate: { itemsPerPage: 13, currentPage: p }">
+        <div class="col-lg-3 col-md-3 col-sm-12 d-flex flex-row align-items-center">
             <fa-icon [icon]="faStar" class="mx-2" ></fa-icon>
             <fa-icon [icon]="faExclamationTriangle" class="mx-2"></fa-icon>
-            <h3 class="m-3">Kevin Castillo</h3>
+            <h3 class="m-3">{{recibido.nombreEmisor}}</h3>
         </div>
-        <div class="col-7 d-flex flex-row align-items-center">
-            <h3 class="m-3 fw-normal">Aqui ira el asunto</h3> - <h3 class="m-3">Aqui el contenido del mensaje Aqui el contenido del mensaje Aqui el contenido...</h3>
+        <div class="col-lg-7 col-md-10 col-sm-12 d-flex flex-row align-items-center">
+            <h3 class="m-3 fw-normal">{{recibido.asunto}}</h3> - <h3 class="m-3">{{recibido.mensaje}}</h3>
         </div>
-        <div class="col-2 d-flex flex-row align-items-center">
-            <h3 class="m-3">21/10/2021 2:34</h3>
-            <fa-icon [icon]="faTrashAlt" style="color: #DB3B30;" class="mx-2"></fa-icon>
-        </div>
-    </div>
-    <div class="row border-bottom">
-        <div class="col-3 d-flex flex-row align-items-center">
-            <fa-icon [icon]="faStar" class="mx-2"></fa-icon>
-            <fa-icon [icon]="faExclamationTriangle" class="mx-2"></fa-icon>
-            <h3 class="m-3">Kevin Castillo</h3>
-        </div>
-        <div class="col-7 d-flex flex-row align-items-center">
-            <h3 class="m-3 fw-normal">Aqui ira el asunto</h3> - <h3 class="m-3">Aqui el contenido del mensaje Aqui el contenido del mensaje Aqui el contenido...</h3>
-        </div>
-        <div class="col-2 d-flex flex-row align-items-center">
-            <h3 class="m-3">21/10/2021 2:34</h3>
-            <fa-icon [icon]="faTrashAlt" style="color: #DB3B30;" class="mx-2"></fa-icon>
-        </div>
-    </div>
-    <div class="row border-bottom">
-        <div class="col-3 d-flex flex-row align-items-center">
-            <fa-icon [icon]="faStar" class="mx-2"></fa-icon>
-            <fa-icon [icon]="faExclamationTriangle" class="mx-2"></fa-icon>
-            <h3 class="m-3">Kevin Castillo</h3>
-        </div>
-        <div class="col-7 d-flex flex-row align-items-center">
-            <h3 class="m-3 fw-normal">Aqui ira el asunto</h3> - <h3 class="m-3">Aqui el contenido del mensaje Aqui el contenido del mensaje Aqui el contenido...</h3>
-        </div>
-        <div class="col-2 d-flex flex-row align-items-center">
-            <h3 class="m-3">21/10/2021 2:34</h3>
-            <fa-icon [icon]="faTrashAlt" style="color: #DB3B30;" class="mx-2"></fa-icon>
-        </div>
-    </div>
-    <div class="row border-bottom">
-        <div class="col-3 d-flex flex-row align-items-center">
-            <fa-icon [icon]="faStar" class="mx-2"></fa-icon>
-            <fa-icon [icon]="faExclamationTriangle" class="mx-2"></fa-icon>
-            <h3 class="m-3">Kevin Castillo</h3>
-        </div>
-        <div class="col-7 d-flex flex-row align-items-center">
-            <h3 class="m-3 fw-normal">Aqui ira el asunto</h3> - <h3 class="m-3">Aqui el contenido del mensaje Aqui el contenido del mensaje Aqui el contenido...</h3>
-        </div>
-        <div class="col-2 d-flex flex-row align-items-center">
-            <h3 class="m-3">21/10/2021 2:34</h3>
-            <fa-icon [icon]="faTrashAlt" style="color: #DB3B30;" class="mx-2"></fa-icon>
-        </div>
-    </div>
-    <div class="row border-bottom">
-        <div class="col-3 d-flex flex-row align-items-center">
-            <fa-icon [icon]="faStar" class="mx-2"></fa-icon>
-            <fa-icon [icon]="faExclamationTriangle" class="mx-2"></fa-icon>
-            <h3 class="m-3">Kevin Castillo</h3>
-        </div>
-        <div class="col-7 d-flex flex-row align-items-center">
-            <h3 class="m-3 fw-normal">Aqui ira el asunto</h3> - <h3 class="m-3">Aqui el contenido del mensaje Aqui el contenido del mensaje Aqui el contenido...</h3>
-        </div>
-        <div class="col-2 d-flex flex-row align-items-center">
-            <h3 class="m-3">21/10/2021 2:34</h3>
+        <div class="col-lg-2 col-md-12 col-sm-12 d-flex flex-row align-items-center">
+            <h3 class="m-3">{{recibido.fecha}}</h3>
+            <fa-icon [icon]="faEnvelopeOpen" class="mx-2"></fa-icon>
             <fa-icon [icon]="faTrashAlt" style="color: #DB3B30;" class="mx-2"></fa-icon>
         </div>
     </div>
