--- a/Frontend/BTOmail/src/app/components/header/header.component.html
+++ b/Frontend/BTOmail/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid m-0 pb-2 px-5 border border-1">
+<div class="container-fluid m-0 pb-2 px-5 border border-1"id="header">
   <div class="row pt-2">
     <div class="col-lg-2 col-md-4 cl-sm-12">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-list m-2" viewBox="0 0 16 16">
@@ -8,7 +8,7 @@
     </div>
     <div class="col-lg-9 col-md-5 col-sm-12 px-0">
         <form class="d-flex w-75 mt-1">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
             <span class="material-icons-outlined"></span>
           </form>
     </div>
