API finalizada - falta buscador

--- a/Frontend/BTOmail/src/app/components/correos/correos.component.html
+++ b/Frontend/BTOmail/src/app/components/correos/correos.component.html
@@ -5,17 +5,19 @@
     </div>
     <div class="row border-top" *ngFor="let recibido of recibidos | paginate: { itemsPerPage: 13, currentPage: p }">
         <div class="col-lg-3 col-md-3 col-sm-12 d-flex flex-row align-items-center">
-            <fa-icon [icon]="faStar" class="mx-2" ></fa-icon>
-            <fa-icon [icon]="faExclamationTriangle" class="mx-2"></fa-icon>
-            <h3 class="m-3">{{recibido.nombreEmisor}}</h3>
+            <fa-icon [icon]="faStar" (click)="updateDestacado(recibido)" style="color: #F4C84B" class="mx-2" *ngIf="recibido.destacado"></fa-icon>
+            <fa-icon [icon]="faStar" (click)="updateDestacado(recibido)" class="mx-2" *ngIf="!recibido.destacado"></fa-icon>
+            <fa-icon [icon]="faExclamationTriangle" (click)="updateSpam(recibido)" class="mx-2"></fa-icon>
+            <h3 class="m-3" [ngClass]="{leido: recibido.leido, noLeido: !recibido.leido}">{{recibido.nombreEmisor}}</h3>
         </div>
         <div class="col-lg-7 col-md-10 col-sm-12 d-flex flex-row align-items-center">
-            <h3 class="m-3 fw-normal">{{recibido.asunto}}</h3> - <h3 class="m-3">{{recibido.mensaje}}</h3>
+            <h3 class="m-3" [ngClass]="{leido: recibido.leido, noLeido: !recibido.leido}">{{recibido.asunto}}</h3> - <h3 class="m-3">{{recibido.mensaje}}</h3>
         </div>
         <div class="col-lg-2 col-md-12 col-sm-12 d-flex flex-row align-items-center">
             <h3 class="m-3">{{recibido.fecha}}</h3>
-            <fa-icon [icon]="faEnvelopeOpen" class="mx-2"></fa-icon>
-            <fa-icon [icon]="faTrashAlt" style="color: #DB3B30;" class="mx-2"></fa-icon>
+            <fa-icon [icon]="faEnvelopeOpen" (click)="updateLeido(recibido)" class="mx-2" *ngIf="recibido.leido"></fa-icon>
+            <fa-icon [icon]="faEnvelope" (click)="updateLeido(recibido)" class="mx-2" *ngIf="!recibido.leido"></fa-icon>
+            <fa-icon [icon]="faTrashAlt" (click)="updateEliminado(recibido)" style="color: #DB3B30;" class="mx-2"></fa-icon>
         </div>
     </div>
 </div>
