--- a/Frontend/BTOmail/src/app/components/destacados/destacados.component.html
+++ b/Frontend/BTOmail/src/app/components/destacados/destacados.component.html
@@ -5,17 +5,19 @@
     </div>
     <div class="row border-top" *ngFor="let destacado of destacados | paginate: { itemsPerPage: 13, currentPage: p }">
         <div class="col-lg-3 col-md-3 col-sm-12 d-flex flex-row align-items-center">
-            <fa-icon [icon]="faStar" class="mx-2" ></fa-icon>
-            <fa-icon [icon]="faExclamationTriangle" class="mx-2"></fa-icon>
-            <h3 class="m-3">{{destacado.nombreEmisor}}</h3>
+            <fa-icon [icon]="faStar" (click)="updateDestacado(destacado)" style="color: #F4C84B" class="mx-2" *ngIf="destacado.destacado"></fa-icon>
+            <fa-icon [icon]="faStar" (click)="updateDestacado(destacado)" class="mx-2" *ngIf="!destacado.destacado"></fa-icon>
+            <fa-icon [icon]="faExclamationTriangle" (click)="updateSpam(destacado)" class="mx-2"></fa-icon>
+            <h3 class="m-3" [ngClass]="{leido: destacado.leido, noLeido: !destacado.leido}">{{destacado.nombreEmisor}}</h3>
         </div>
         <div class="col-lg-7 col-md-10 col-sm-12 d-flex flex-row align-items-center">
-            <h3 class="m-3 fw-normal">{{destacado.asunto}}</h3> - <h3 class="m-3">{{destacado.mensaje}}</h3>
+            <h3 class="m-3" [ngClass]="{leido: destacado.leido, noLeido: !destacado.leido}">{{destacado.asunto}}</h3> - <h3 class="m-3">{{destacado.mensaje}}</h3>
         </div>
         <div class="col-lg-2 col-md-12 col-sm-12 d-flex flex-row align-items-center">
             <h3 class="m-3">{{destacado.fecha}}</h3>
-            <fa-icon [icon]="faEnvelopeOpen" class="mx-2"></fa-icon>
-            <fa-icon [icon]="faTrashAlt" style="color: #DB3B30;" class="mx-2"></fa-icon>
+            <fa-icon [icon]="faEnvelopeOpen" (click)="updateLeido(destacado)" class="mx-2" *ngIf="destacado.leido"></fa-icon>
+            <fa-icon [icon]="faEnvelope" (click)="updateLeido(destacado)" class="mx-2" *ngIf="!destacado.leido"></fa-icon>
+            <fa-icon [icon]="faTrashAlt" (click)="updateEliminado(destacado)" style="color: #DB3B30;" class="mx-2"></fa-icon>
         </div>
     </div>
 </div>
