--- a/Frontend/BTOmail/src/app/components/enviados/enviados.component.html
+++ b/Frontend/BTOmail/src/app/components/enviados/enviados.component.html
@@ -5,17 +5,18 @@
     </div>
     <div class="row border-top" *ngFor="let enviado of enviados | paginate: { itemsPerPage: 13, currentPage: p }">
         <div class="col-lg-3 col-md-3 col-sm-12 d-flex flex-row align-items-center">
-            <fa-icon [icon]="faStar" class="mx-2" ></fa-icon>
-            <fa-icon [icon]="faExclamationTriangle" class="mx-2"></fa-icon>
-            <h3 class="m-3">{{enviado.nombreEmisor}}</h3>
+            <fa-icon [icon]="faStar" (click)="updateDestacado(enviado)" style="color: #F4C84B" class="mx-2" *ngIf="enviado.destacado"></fa-icon>
+            <fa-icon [icon]="faStar" (click)="updateDestacado(enviado)" class="mx-2" *ngIf="!enviado.destacado"></fa-icon>
+            <h3 class="m-3" [ngClass]="{leido: enviado.leido, noLeido: !enviado.leido}">{{enviado.nombreEmisor}}</h3>
         </div>
         <div class="col-lg-7 col-md-10 col-sm-12 d-flex flex-row align-items-center">
-            <h3 class="m-3 fw-normal">{{enviado.asunto}}</h3> - <h3 class="m-3">{{enviado.mensaje}}</h3>
+            <h3 class="m-3" [ngClass]="{leido: enviado.leido, noLeido: !enviado.leido}">{{enviado.asunto}}</h3> - <h3 class="m-3">{{enviado.mensaje}}</h3>
         </div>
         <div class="col-lg-2 col-md-12 col-sm-12 d-flex flex-row align-items-center">
             <h3 class="m-3">{{enviado.fecha}}</h3>
-            <fa-icon [icon]="faEnvelopeOpen" class="mx-2"></fa-icon>
-            <fa-icon [icon]="faTrashAlt" style="color: #DB3B30;" class="mx-2"></fa-icon>
+            <fa-icon [icon]="faEnvelopeOpen" (click)="updateLeido(enviado)" class="mx-2" *ngIf="enviado.leido"></fa-icon>
+            <fa-icon [icon]="faEnvelope" (click)="updateLeido(enviado)" class="mx-2" *ngIf="!enviado.leido"></fa-icon>
+            <fa-icon [icon]="faTrashAlt" (click)="updateEliminado(enviado)" style="color: #DB3B30;" class="mx-2"></fa-icon>
         </div>
     </div>
 </div>
