--- a/Frontend/BTOmail/src/app/components/header/header.component.html
+++ b/Frontend/BTOmail/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="col-lg-9 col-md-5 col-sm-12 px-0">
         <form class="d-flex w-75 mt-1">
-            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+            <input type="text" class="form-control me-2" placeholder="Buscar" aria-label="Search">
             <span class="material-icons-outlined"></span>
           </form>
     </div>
