--- a/Frontend/BTOmail/src/app/components/header/header.component.html
+++ b/Frontend/BTOmail/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-list m-2" viewBox="0 0 16 16">
         <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
       </svg>
-      <img src="../../../assets/images/gmail.png" id="logo" class="mx-4" alt="" srcset="">
+      <img src="assets/images/gmail.png" id="logo" class="mx-4" alt="" srcset="">
     </div>
     <div class="col-lg-9 col-md-5 col-sm-12 px-0">
         <form class="d-flex w-75 mt-1">
